# cryptick

./: LICENSE  README.md  package-lock.json  package.json
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: TickerWindow.svelte
src/routes/: +page.svelte
