[package]
name = "crypto_alerts_tauri"
version = "0.1.0"
description = "A crypto alerts app"
authors = ["BrianPistr"]
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = [] }

# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-Line Argument Parsing
clap = { version = "4.0.32", features = ["derive"] }

# Asynchronous Runtime
tokio = { version = "1.28", features = ["full"] }

# WebSocket Client
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio-stream = "0.1"

# Futures Utilities
futures-util = "0.3.28"
futures = "0.3"

# Audio Playback
rodio = "0.17"

# Logging
log = "0.4"
env_logger = "0.9"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
